	    or homeDirectory if that's not needed (because we haven't the corresponding
	    object class).
	  - We should care less what OBJECT CLASS is used when creating users, and more
	    the fact what ATTRIBUTE is availible (in these object classes). Hence,
	    don't use in_array(), but pql_check_attribute().

	API changes
	Schema changes:

phpQLAdmin 2.0.18c TO BE ANNOUNCED
	Bug fixes
	  - Add uidNumber, gidNumber and homeDirectory to a mail account IF we've
	    choosen to use 'posixAccount' when creating user(s).
	  - De-globalize the root DN in call to user_detail.php from user_details-forwards_from.inc.
	  - The 'attribute key' used for 'attribute independence' _must_ be lowercase
	    to work as a variable later.
	  - PQL_CONF_ to PQL_ATTR_ spelling error fixed.
	  - Attribute spelling error fixed in tables/user_details-basic.inc
	    ('ugidnumber' should be 'uidnumber').
	  - Predefine (empty) variables to get rid of errors.
	  - Correctly process the next page/form to display in user_add.php. This depend
	    largely on if we have an MX error or not.
	  - Don't set 'host' to 'default' (in tables/user_add-details.inc) if we're not
	    running in advanced mode. The host value will be figured out automaticly
	    (in user_add.php)...
	  - Rewrite the part that adds {User,Group}ID slightly. We use the
	    PQL_CONF_FORWARDINGACCOUNT_UIDNUMBER value if it's a mail account, and
	    generate a new value using pql_get_next_ugidnumber() if not.
	  - The 'userhost' value which is/was generated by user_add.php might be
	    an array containing the DNS entry and/or the QLC object(s). The DNS value
	    is by default used, othervise the first QLC object.
	  - If a define isn't set, the pql_get_define() will return an empty array with
	    all rootdn's. Catch this, and return NULL if the define is unset.

	GUI layout change
	  - Require the pql_config.inc file to avoid PHP errors in the right frame
	    when choosing control.php or ezmlm.php.

	Misc changes	