@@ -31,9 +31,10 @@
 #            test                            11
 #            autoAddRCPTHosts                12
 #            autoAddHostName                 13
-#            autoCreateUsername              14
+#            autoCreateUserName              14
 #            autoCreateMailAddress           15
-#            useWebSrv                       16
+#            autoCreatePassWord              16
+#            useWebSrv                       17
 #
 #          System texts                     2
 #            whoAreWe                         1
@@ -97,7 +98,7 @@
 # availible from http://sourceforge.net/projects/modcfgldap/
 # See README.apache in this directory.
 
-# $Id: phpQLAdmin.schema,v 2.44 2004-04-05 08:19:17 turbo Exp $
+# $Id: phpQLAdmin.schema,v 2.45 2004-04-29 12:42:09 turbo Exp $
 
 # PQL_ATTR_SHOW_USERS (true | false)
 attributetype ( 1.3.6.1.4.1.8767.3.2.1.1 NAME 'showUsers'
@@ -203,8 +204,15 @@ attributetype ( 1.3.6.1.4.1.8767.3.2.1.15 NAME 'autoCreateMailAddress'
   SYNTAX 1.3.6.1.4.1.1466.115.121.1.7
   SINGLE-VALUE )
 
+# PQL_ATTR_CREATE_PASSWORD
+attributetype ( 1.3.6.1.4.1.8767.3.2.1.16 NAME 'autoCreatePassWord'
+  DESC 'Automatically create password when creating a user [True/False]?'
+  EQUALITY booleanMatch
+  SYNTAX 1.3.6.1.4.1.1466.115.121.1.7
+  SINGLE-VALUE )
+
 # PQL_ATTR_WEBSRV_USE (true | false)
-attributetype ( 1.3.6.1.4.1.8767.3.2.1.16 NAME 'useWebSrv'
+attributetype ( 1.3.6.1.4.1.8767.3.2.1.17 NAME 'useWebSrv'
   DESC 'Manage a webserver [True/False]?'
   EQUALITY booleanMatch
   SYNTAX 1.3.6.1.4.1.1466.115.121.1.7
@@ -584,7 +592,8 @@ objectclass ( 1.3.6.1.4.1.8767.3.1.3
         additionalDomainName $ defaultPasswordScheme $
         maximumMailingLists $
         autoCreateUsername $ autoCreateMailAddress $
-        userNamePrefix $ userNamePrefixLength )
+        autoCreatePassWord $ userNamePrefix $
+        userNamePrefixLength )
   SUP top AUXILIARY )
 
 objectclass ( 1.3.6.1.4.1.8767.3.1.4
